--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,7 +6,7 @@
 			<p style="color:red;" id="message"><%=message%></p>
 			<h1 style="text-align:center;">Login</h1>
 			<label>User Mail-ID :</label>
-			<input type="email" name="mail" placeholder="Mail ID"><br><br>
+			<input type="email" name="mail" value="" placeholder="Mail ID"><br><br>
 			<label>Password :</label>
 			<input type="Password" name="password" placeholder="Password"><br><br>
 			<button type="submit" name="submit" >Login</button><br>
