--- a/views/show.ejs
+++ b/views/show.ejs
@@ -6,11 +6,10 @@
 			<div id="right">
 			<ul>
 				<li><a href="/">Log out</a></li>
-				<p style="display:none;" name="mail" value="<%=mail%>"></p>
 			</ul>
 			</div>
 		</nav>
-
+				
 		<div id="result">
 		<h4><%=message%></h4>
 			<div id="flights">
@@ -25,15 +24,23 @@
 				</tr>
 				<%let i=1;%>
 				<%table.forEach(function(row){%>
+				<form action="/login/search/book" method="post">
+				<input type="hidden" name="mail" value=<%=mail%>>
+				<input type="hidden" name="source" value=<%=source%>>
+				<input type="hidden" name="destination" value=<%=destination%>>
+				<input type="hidden" name="date" value=<%=date%>>
+				<input type="hidden" name="flight" value=<%=row['flight']%>>
+				<input type="hidden" name="departure" value=<%=row['departure']%>>
 				<tr>
 					<td><%=i%></td>
-					<td><%=row['flight']%></td>
-					<td><%=row['departure']%></td>
-					<td><%=row['reach']%></td>
-					<td><%=row['seats']%></td>
-					<td><a href="/login/search/book"><button type="submit">Book</button></a></td>
+					<td ><%=row['flight']%></td>
+					<td ><%=row['departure']%></td>
+					<td ><%=row['reach']%></td>
+					<td ><%=row['seats']%></td>
+					<td ><button type="submit">Book</button></td>
 				</tr>
 				<%i=i+1;%>
+				</form>
 				<%});%>
 			</table>
 			</div>
